# ml-model-serve

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  logging.conf  makefile  pyproject.toml
.github/workflows/: tests-unit-and-integration.yml
src/: fastapi_app.py
src/controllers/: health_controller.py  model_controller.py
src/core/entities/: model.py
src/core/interfaces/: cache_service.py  model_repository.py
src/core/use_cases/: get_model_info.py
src/infrastructure/cache/: redis_cache_service.py
src/infrastructure/db/: dynamodb_model_repository.py
tests/: conftest.py  test_app.py
tests/unit/: test_dynamodb_model_repository.py  test_get_model_info.py  test_redis_cache_service.py
